--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mtogo-delivery-frontend",
+  "name": "mtogo-kitchen-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.3",
+    "bootstrap": "^5.2.1",
+    "chai": "^4.3.10",
+    "chromedriver": "^119.0.1",
+    "cucumber": "^6.0.7",
+    "dotenv": "^16.3.1",
+    "next": "14.0.2",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-tabs": "^6.0.2",
+    "selenium-webdriver": "^4.15.0"
   },
   "devDependencies": {
-    "eslint": "8.54.0",
-    "eslint-config-next": "14.0.3"
+    "@cucumber/cucumber": "^10.0.1",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2"
   }
 }
